--- a/ILMApp/src/main/resources/nclusivere_statement.jrxml
+++ b/ILMApp/src/main/resources/nclusivere_statement.jrxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-06-20T23:23:16 -->
+<!-- 2017-06-23T21:57:58 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="nclusivereporta4_wide" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="782" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" >
 	<property name="ireport.zoom" value="0.90909090909091"/>
-	<property name="ireport.x" value="30"/>
-	<property name="ireport.y" value="3617"/>
+	<property name="ireport.x" value="26"/>
+	<property name="ireport.y" value="1603"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="inclusiveLeadershipStmt" class="java.util.List" isForPrompting="false"/>
 	<field name="firstName" class="java.lang.String"/>
@@ -21,6 +21,11 @@
 	<field name="inclusiveTeamsandTeamworkStmt" class="java.util.List"/>
 	<field name="inclusiveGoalsandObjectivesStmt" class="java.util.List"/>
 	<field name="inclusiveRolesResponsibilitiesStmt" class="java.util.List"/>
+	<field name="challengingPrejudiceStmt" class="java.util.List"/>
+	<field name="ethicalPracticeStmt" class="java.util.List"/>
+	<field name="commitmentToDifferenceStmt" class="java.util.List"/>
+	<field name="collaborativePracticeValuesStmt" class="java.util.List"/>
+	<field name="collaborativeCommunicationsStmt" class="java.util.List"/>
 	<detail>
 		<band height="555" splitType="Stretch">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT}==1]]></printWhenExpression>
@@ -283,21 +288,14 @@ development needs.]]></text>
 				<imageExpression><![CDATA["p4-2.jpg"]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="40" y="110" width="255" height="30" forecolor="#FFFFFF" />
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA["• "+$F{inclusiveLeadershipStmt}.get( 0 )]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="39" y="145" width="255" height="30" forecolor="#FFFFFF" />
+				<reportElement x="39" y="110" width="255" height="30" forecolor="#FFFFFF" />
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{inclusiveLeadershipStmt}.size()>0?"• "+$F{inclusiveLeadershipStmt}.get( 0 ):""]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="39" y="180" width="255" height="30" forecolor="#FFFFFF" >
+				<reportElement x="39" y="145" width="255" height="30" forecolor="#FFFFFF" >
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 				</reportElement>
 				<textElement>
@@ -313,7 +311,7 @@ development needs.]]></text>
 				<textFieldExpression><![CDATA[$F{inclusiveLeadershipStmt}.size()>6?"• "+$F{inclusiveLeadershipStmt}.get( 6 ):""]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="39" y="215" width="255" height="30" forecolor="#FFFFFF" >
+				<reportElement x="39" y="180" width="255" height="30" forecolor="#FFFFFF" >
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 				</reportElement>
 				<textElement>
@@ -322,7 +320,7 @@ development needs.]]></text>
 				<textFieldExpression><![CDATA[$F{inclusiveLeadershipStmt}.size()>2?"• "+$F{inclusiveLeadershipStmt}.get( 2 ):""]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="39" y="250" width="255" height="30" forecolor="#FFFFFF" >
+				<reportElement x="39" y="215" width="255" height="30" forecolor="#FFFFFF" >
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 				</reportElement>
 				<textElement>
@@ -331,7 +329,7 @@ development needs.]]></text>
 				<textFieldExpression><![CDATA[$F{inclusiveLeadershipStmt}.size()>3?"• "+$F{inclusiveLeadershipStmt}.get( 3 ):""]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="39" y="285" width="255" height="30" forecolor="#FFFFFF" >
+				<reportElement x="39" y="250" width="255" height="30" forecolor="#FFFFFF" >
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 				</reportElement>
 				<textElement>
@@ -340,7 +338,7 @@ development needs.]]></text>
 				<textFieldExpression><![CDATA[$F{inclusiveLeadershipStmt}.size()>4?"• "+$F{inclusiveLeadershipStmt}.get( 4 ):""]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="39" y="320" width="255" height="30" forecolor="#FFFFFF" >
+				<reportElement x="39" y="285" width="255" height="30" forecolor="#FFFFFF" >
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 				</reportElement>
 				<textElement>
@@ -961,100 +959,56 @@ development needs.]]></text>
 				<text><![CDATA[CHALLENGING PREJUDICE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="297" y="128" width="250" height="34" forecolor="#FFFFFF" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Ensure that information systems that guide decision making are free of bias.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="39" y="128" width="250" height="46" forecolor="#FFFFFF" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Learn about the cultural backgrounds, lives and interests of colleagues outside of the work place.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="39" y="175" width="250" height="34" forecolor="#000066" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Be creative, flexible and look for new ways of doing things.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="39" y="210" width="250" height="34" forecolor="#FFFFFF" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Acknowledge all faiths present in your workplace.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="39" y="246" width="250" height="34" forecolor="#000066" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Demonstrate a knowledge and interest in other cultures.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="39" y="281" width="250" height="47" forecolor="#FFFFFF" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Admit you don’t know the answer when you don’t, and seek opinions from those around you.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="39" y="329" width="250" height="32" forecolor="#000066" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Exert effort to identify your own biases, and find ways to manage them in the workplace.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="39" y="362" width="250" height="49" forecolor="#FFFFFF" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Demonstrate open-mindedness, a passion for learning, and a desire for exposure to different ideas.]]></text>
-			</staticText>
-			<staticText>
 				<reportElement isPrintRepeatedValues="false" x="6" y="427" width="23" height="99" forecolor="#FFFFFF" />
 				<textElement textAlignment="Center" rotation="Left">
 					<font size="16" isBold="true"/>
 				</textElement>
 				<text><![CDATA[LEARNING]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="297" y="164" width="250" height="46" forecolor="#000066" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Select the right communication tool for the right task, and not necessarily the most efficient one best suited to your work habits.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="297" y="213" width="250" height="63" forecolor="#FFFFFF" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Get involved in mentoring another person who requires support within the business, or seek mentoring to develop a new skill that is of interest and use.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="297" y="278" width="250" height="63" forecolor="#000066" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Create employee resource groups, or networks of employees who share an affiliation (such as women, ethnic minorities, or young professionals).]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="297" y="344" width="250" height="63" forecolor="#FFFFFF" />
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[• Within the resource groups seek real assignments that are of tangible benefit to the business.]]></text>
-			</staticText>
 			<image>
 				<reportElement x="562" y="99" width="220" height="430" />
 				<imageExpression><![CDATA["p9-1.jpg"]]></imageExpression>
 			</image>
+			<textField>
+				<reportElement x="36" y="130" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>0?"• "+$F{challengingPrejudiceStmt}.get( 0 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="35" y="170" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>1?"• "+$F{challengingPrejudiceStmt}.get( 1 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="35" y="210" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>2?"• "+$F{challengingPrejudiceStmt}.get( 2 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="35" y="250" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>4?"• "+$F{challengingPrejudiceStmt}.get( 4 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="34" y="290" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>5?"• "+$F{challengingPrejudiceStmt}.get( 5 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="300" y="130" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>6?"• "+$F{challengingPrejudiceStmt}.get( 6 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="298" y="170" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>7?"• "+$F{challengingPrejudiceStmt}.get( 7 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="300" y="210" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>8?"• "+$F{challengingPrejudiceStmt}.get( 8 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="298" y="250" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>9?"• "+$F{challengingPrejudiceStmt}.get( 9 ):""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="300" y="290" width="255" height="30" forecolor="#FFFFFF" />
+				<textFieldExpression><![CDATA[$F{challengingPrejudiceStmt}.size()>10?"• "+$F{challengingPrejudiceStmt}.get( 10 ):""]]></textFieldExpression>
+			</textField>
 		</band>
 		<band height="555">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT}==1]]></printWhenExpression>
