--- a/ILMApp/src/main/resources/new_commercial_impact_of_diversity_subreport.jrxml
+++ b/ILMApp/src/main/resources/new_commercial_impact_of_diversity_subreport.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-07-12T15:57:32 -->
+<!-- 2017-07-14T17:06:51 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="il_subreport" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="6ae6a1fa-441d-428f-8070-a2fb6445bfdb">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
@@ -14,6 +14,8 @@
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<field name="text" class="java.lang.String"/>
+	<field name="leftText" class="java.lang.String"/>
+	<field name="rightText" class="java.lang.String"/>
 	<background>
 		<band height="595">
 			<image>
@@ -77,8 +79,9 @@ Measure™ Report]]></text>
 				</reportElement>
 				<box topPadding="0" bottomPadding="0"/>
 				<textField isStretchWithOverflow="true">
-					<reportElement mode="Opaque" x="0" y="0" width="500" height="320" isPrintInFirstWholeBand="true" forecolor="#665F5F" backcolor="#FFFFFF" uuid="625204fd-27af-488f-8ecc-cd4127ca8449">
+					<reportElement mode="Opaque" x="0" y="0" width="245" height="320" isPrintInFirstWholeBand="true" forecolor="#665F5F" backcolor="#FFFFFF" uuid="625204fd-27af-488f-8ecc-cd4127ca8449">
 						<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 					</reportElement>
 					<box topPadding="10" leftPadding="25" bottomPadding="10" rightPadding="25">
 						<pen lineWidth="0.0" lineColor="#FFFFFF"/>
@@ -87,7 +90,21 @@ Measure™ Report]]></text>
 						<font fontName="Arial" size="9" isBold="false"/>
 						<paragraph lineSpacing="Double" lineSpacingSize="0.0" firstLineIndent="0" leftIndent="0" rightIndent="0" spacingBefore="0" spacingAfter="0"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{text}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{leftText}]]></textFieldExpression>
+				</textField>
+				<textField isStretchWithOverflow="true">
+					<reportElement mode="Opaque" x="250" y="0" width="245" height="320" isPrintInFirstWholeBand="true" forecolor="#665F5F" backcolor="#FFFFFF" uuid="c6f6eebc-e89d-41ca-9050-34e03fe7363e">
+						<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					</reportElement>
+					<box topPadding="10" leftPadding="25" bottomPadding="10" rightPadding="25">
+						<pen lineWidth="0.0" lineColor="#FFFFFF"/>
+					</box>
+					<textElement verticalAlignment="Top" markup="html">
+						<font fontName="Arial" size="9" isBold="false"/>
+						<paragraph lineSpacing="Double" lineSpacingSize="0.0" firstLineIndent="0" leftIndent="0" rightIndent="0" spacingBefore="0" spacingAfter="0"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{rightText}]]></textFieldExpression>
 				</textField>
 			</frame>
 			<frame borderSplitType="DrawBorders">
