--- a/ILMApp/src/main/resources/new_inclusive_leadership_subreport.jrxml
+++ b/ILMApp/src/main/resources/new_inclusive_leadership_subreport.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-07-28T08:19:29 -->
+<!-- 2017-07-29T11:45:30 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="il_subreport" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="6ae6a1fa-441d-428f-8070-a2fb6445bfdb">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
@@ -84,14 +84,14 @@ Measure</b>™ Report]]></text>
 				</textField>
 			</frame>
 			<frame borderSplitType="DrawBorders">
-				<reportElement key="" positionType="Float" mode="Transparent" x="67" y="320" width="510" height="135" backcolor="#FFFFFF" uuid="056e0c36-fb0e-4eea-925e-061b68cf300c">
+				<reportElement key="" positionType="Float" mode="Opaque" x="67" y="320" width="510" height="135" backcolor="#FFFFFF" uuid="459743c5-89f8-479c-b207-a454e91bdc8a">
 					<property name="ShowOutOfBoundContent" value="false"/>
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 				</reportElement>
 				<staticText>
-					<reportElement mode="Transparent" x="0" y="0" width="480" height="120" isPrintInFirstWholeBand="true" forecolor="#2A3768" backcolor="#E6E3E3" uuid="10bb1a58-98f4-4aba-be9d-682a03ce7bbd"/>
-					<box topPadding="10" leftPadding="28" bottomPadding="0" rightPadding="0">
+					<reportElement mode="Opaque" x="15" y="0" width="470" height="120" isPrintInFirstWholeBand="true" forecolor="#2A3768" backcolor="#E6E3E3" uuid="c73a5d42-cd5f-45ae-8ffc-d95ba2da5854"/>
+					<box topPadding="10" leftPadding="20" bottomPadding="0" rightPadding="0">
 						<pen lineWidth="0.0"/>
 					</box>
 					<textElement verticalAlignment="Top" markup="none">
@@ -101,16 +101,15 @@ Measure</b>™ Report]]></text>
 					<text><![CDATA[Learning & Development Tasks]]></text>
 				</staticText>
 				<textField>
-					<reportElement isPrintRepeatedValues="false" mode="Opaque" x="0" y="40" width="490" height="80" forecolor="#000000" backcolor="#FFFFFF" uuid="eb866a44-3144-42b4-a3b2-c8c33ae6b96e">
+					<reportElement mode="Opaque" x="15" y="40" width="470" height="80" isPrintInFirstWholeBand="true" forecolor="#000000" backcolor="#E6E3E3" uuid="de19ad0b-9fe6-42f7-a452-4b31f12b21f3">
 						<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
-						<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
-						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 					</reportElement>
 					<box topPadding="20" leftPadding="25" bottomPadding="10" rightPadding="20">
 						<pen lineWidth="0.0" lineColor="#FFFFFF"/>
 					</box>
 					<textElement textAlignment="Left" verticalAlignment="Top" markup="styled">
-						<font fontName="Raleway" size="10" isBold="false" pdfFontName=""/>
+						<font fontName="Raleway" size="10" isBold="false"/>
 						<paragraph lineSpacing="Fixed" lineSpacingSize="12.0" firstLineIndent="-10" leftIndent="25" rightIndent="0" spacingBefore="0" spacingAfter="0"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{ldTaskText}]]></textFieldExpression>
